# IMX

./: .gitignore  CHANGELOG.md  README.md  imx-spec-v0_6.md  pyproject.toml
catalog/: task_classes.yaml
catalog/adapters/: claude-code.yaml  codex.yaml  copilot.yaml  gemini-cli.yaml  kiro.yaml
catalog/eval/: README.md
catalog/nodes.d/: claude-code-opus.yaml  claude-code-sonnet.yaml  codex-cli-balanced.yaml  copilot-cli-economy.yaml  gemini-cli-balanced.yaml  local-ollama-trusted.yaml
catalog/profiles/: balanced.yaml  deep.yaml  economy.yaml  implementer.yaml  reviewer.yaml  sandboxed.yaml
catalog/prompts/: attention-refresh.md  handoff-summary.md  pre-mortem.md  task-packet-dispatch.md
catalog/rates/: anthropic.yaml  google.yaml  openai.yaml
catalog/roles/: architect.md  deployer.md  implementer.md  orchestrator.md  reviewer.md
catalog/schemas/: handoff_packet.schema.json  task_packet.schema.json  (+1 more)
imx/: __init__.py  aip_adapter.py  budget.py  catalog.py  cli.py  context_artifacts.py  control_intents.py  correlation.py  cost_routing.py  ema.py  exploration.py  gates.py  harness_drift.py  mesh.py  models.py  quota.py  rca.py  recovery.py  router.py  scoring.py  telemetry.py  workflow.py
tests/: test_aip_adapter.py  test_budget.py  test_catalog.py  test_context_artifacts.py  test_control_intents.py  test_correlation.py  test_cost_routing.py  test_ema.py  test_exploration.py  test_gates.py  test_harness_drift.py  test_mesh.py  test_quota.py  test_rca.py  test_recovery.py  test_router.py  test_scoring.py  test_telemetry.py  test_workflow.py
(+6 files in other folders)
